--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>Kommunikationsanwendung</title>
-    <link rel="stylesheet" href="default.css" id="style-sheet" />
+    <link rel="stylesheet" href="/src/default.css" id="style-sheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.6.1/socket.io.js"></script>
-    <script src="skript.js"></script>
+    <script src="/src/skript.js"></script>
   </head>
   <body>
     <h1>The Crappy Chat Tool</h1>
