--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,15 @@
   </head>
   <body>
     <h1>The Crappy Chat Tool</h1>
+    <div id="nickname-container">
+      <form id="nickname-form">
+        <input type="text" id="nickname-input" placeholder="Nickname" />
+        <button type="submit">Set Nickname</button>
+      </form>
+    </div>
+
+    <div id="error-message" class="error-message"></div>
+
     <div id="style-selector">
       <label for="style-select">Stil auswählen:</label>
       <select id="style-select">
